--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.6.6'
+    id 'org.springframework.boot' version '2.2.0.RELEASE'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
@@ -23,15 +23,19 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
     implementation 'com.querydsl:querydsl-core:4.2.2'
     implementation 'com.querydsl:querydsl-jpa:4.2.2'
+
     implementation 'com.h2database:h2'
 
     annotationProcessor(
             "org.projectlombok:lombok:1.18.22",
             "com.querydsl:querydsl-apt:4.2.2:jpa",
+            "org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final",
+            'javax.annotation:javax.annotation-api'
     )
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
