--- a/build.gradle
+++ b/build.gradle
@@ -22,20 +22,24 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.22'
 
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.data:spring-data-r2dbc:1.4.0'
+
+    implementation 'org.mapstruct:mapstruct:1.3.1.Final'
 
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     implementation 'com.querydsl:querydsl-core:4.2.2'
     implementation 'com.querydsl:querydsl-jpa:4.2.2'
 
-    implementation 'com.h2database:h2'
+    runtimeOnly 'com.h2database:h2'
 
     annotationProcessor(
             "org.projectlombok:lombok:1.18.22",
             "com.querydsl:querydsl-apt:4.2.2:jpa",
             "org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final",
-            'javax.annotation:javax.annotation-api'
+            'javax.annotation:javax.annotation-api',
+            'org.mapstruct:mapstruct-processor:1.3.1.Final',
     )
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
